@@ -5,7 +5,7 @@ GDAL_ROOT = ..
 EXTRAFLAGS =	-DFRMT_ceos -DFRMT_aigrid -DFRMT_elas -DFRMT_hfa -DFRMT_gtiff\
 		-DFRMT_sdts -DFRMT_raw -DFRMT_gxf -DFRMT_ceos2 -DFRMT_png \
 		-DFRMT_jpeg -DFRMT_dted -DFRMT_mem -DFRMT_jdem -DFRMT_gif \
-		-DFRMT_envisat
+		-DFRMT_envisat -DFRMT_aaigrid
 
 !INCLUDE $(GDAL_ROOT)/nmake.opt
 
@@ -15,6 +15,8 @@ subdirs:
 	cd ceos
 	$(MAKE) /f makefile.vc
 	cd ..\aigrid
+	$(MAKE) /f makefile.vc
+	cd ..\aaigrid
 	$(MAKE) /f makefile.vc
 	cd ..\elas
 	$(MAKE) /f makefile.vc
@@ -61,6 +63,8 @@ clean:
 	cd ceos
 	$(MAKE) /f makefile.vc clean
 	cd ..\aigrid
+	$(MAKE) /f makefile.vc clean
+	cd ..\aaigrid
 	$(MAKE) /f makefile.vc clean
 	cd ..\elas
 	$(MAKE) /f makefile.vc clean
